src/Footer.module.css
footer {
    position: absolute;
    bottom: 0;
    height: 40px;
    width: 100%;    
    font-weight: 200;
    font-size: 14px;
    left: 45%;
    animation:  mymove 5s;    
    /* animation-timing-function: ; */
    
    
    
    }
    @keyframes mymove {
        from {left: 0px;}
        to{left: 45%};
        
    }

    @media only screen and (max-width: 576px) {
        footer {
            display: none;
        }
    }

